language/move-lang/tests/move_check/expansion/named_address_assigned_multiple_times_invalid.exp
error[E02003]: invalid 'address' declaration
  ┌─ tests/move_check/expansion/named_address_assigned_multiple_times_invalid.move:3:13
  │
2 │ address A = 0x1;
  │             --- Address previously assigned here
3 │ address A = 2;
  │             ^ Invalid address assignment. Multiple values were given for address 'A'

